--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Lock-and-Key-Library-The-Most-Interesting-Stories-of-All-Nations-North-Europe-Russian-Swed__1552
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   contributors:
   - agent_name: Ingemann, Bernhard Severin
@@ -115,7 +115,12 @@ contributor:
       gutenberg_agent_id: '675'
       url: http://www.gutenberg.org/2009/agents/675
       wikipedia: http://en.wikipedia.org/wiki/Julian_Hawthorne
+covers:
+- cover_type: generated
+  image_path: cover.png
 description: 'See also: #12144'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1552#The-Lock-and-Key-Library-The-Most-Interesting-Stories-of-All-Nations-North-Europe-Russian-Swed_
 gutenberg_bookshelf: Short Stories
 gutenberg_issued: '1998-12-01'
 gutenberg_type: Text
